<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/entrada_caverna"
    android:orientation="vertical"
    android:gravity="center"

    >
    <TextView
        android:id="@+id/tv_Seleccion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seleccion_un_idioma"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textAlignment="center"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center|top"
        android:layout_marginTop="30sp"
        >

        <Button
            android:id="@+id/btn_Castellano"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/castellano" />

        <Button
            android:id="@+id/btn_Euskera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/euskera"
            android:layout_marginStart="50sp"/>
    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>