<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/mainLayout"
    android:layout_gravity="center"
    android:background="@drawable/caverna_cristal"
    tools:context=".JuegoActivity"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/LinearLayoutPuntuacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/tvContador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:text="@string/contador"
            android:textColor="@color/blanco_roto"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnAudio"
            app:layout_constraintStart_toEndOf="@+id/tvContador"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvDescPuntos"
                android:textColor="@color/blanco_roto"
                android:textSize="28sp"
                android:textStyle="bold"/>



            <TextView
                android:id="@+id/puntos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/puntos"
                android:textColor="@color/blanco_roto"
                android:textSize="28sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tv_De"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/de"
                android:textColor="@color/blanco_roto"
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_marginStart="4dp"/>

            <TextView
                android:id="@+id/tv_PuntosMinimo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="28sp"
                android:textStyle="bold"
                android:layout_marginStart="4dp"
                android:textColor="@color/blanco_roto"/>
        </LinearLayout>

        <ImageButton
            android:id="@+id/btnAudio"
            android:layout_width="0dp"
            android:layout_height="45dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:contentDescription="@string/desactivar_audio"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_baseline_volume_off_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <view
        android:id="@+id/gifGameOver"
        class="pl.droidsonroids.gif.GifImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/game_over"
        android:visibility="gone"
        tools:visibility="gone" />

    <GridLayout
        android:id="@+id/gridTablero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="100dp"/>


    <Button
        android:id="@+id/btnRendirse"
        android:layout_width="209dp"
        android:layout_height="53dp"
        android:layout_gravity="center|bottom"
        android:backgroundTint="#FF9800"
        android:text="@string/rendirse"
        app:cornerRadius="20dp"
        style="@style/Button"
        android:layout_marginTop="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.747"
        app:layout_constraintStart_toStartOf="parent" />

</LinearLayout>