<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/entrada_caverna">

    <Button
        android:id="@+id/btnMenu"
        android:layout_width="143dp"
        android:layout_height="77dp"
        android:layout_marginBottom="176dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/ic_baseline_menu_24"
        android:text="@string/menu"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnSonido"
        android:layout_width="163dp"
        android:layout_height="72dp"
        android:layout_marginBottom="120dp"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/ic_baseline_volume_off_24"
        android:scaleType="fitCenter"
        android:text="@string/desactivar_audio"
        android:textColor="@color/black"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/btnMenu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <RadioGroup
        android:layout_width="163dp"
        android:layout_height="106dp"
        android:layout_marginBottom="36dp"
        android:background="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/btnSonido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/radbtnCast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/castellano" />

        <RadioButton
            android:id="@+id/radbtnEusk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/euskera" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>